// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing EditCredential component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="To main page"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Username
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Server
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expires at
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Portuguese"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Portuguese"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Brasil flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="English"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="English"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="United Kingdom flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Spanish"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Spanish"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Spain flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          My monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Account settings
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logout
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Credential not found.
    </p>
  </div>
</div>
`;

exports[`testing EditCredential component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="Para página principal"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Nome de usuário
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Servidor
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expira em
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Português"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Português"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira do Brasil"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Inglês"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="Inglês"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira do Reino Unido"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Espanhol"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Espanhol"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira da Espanha"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          Meus monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Configurações da conta
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Encerrar sessão
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Credencial não encontrada.
    </p>
  </div>
</div>
`;

exports[`testing EditCredential component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="A la página principal"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Nombre de usuario
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Servidor
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expira a las
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Portugués"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Portugués"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera de Brasil"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Inglés"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="Inglés"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera del Reino Unido"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Español"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Español"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera de España"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          Mis monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Configuraciones de la cuenta
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Deslogar
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <p
      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-alignCenter"
    >
      Credencial no encontrada.
    </p>
  </div>
</div>
`;
